@@ -1,3 +1,7 @@
+[07 March 08]
+
+* Added support for regexp delimiter (Matt Aimonetti)
+
 [30 Jan 08]
 
 * Fix Tag.destroy_unused on Rails 2.0.
